# numcore

./: .gitignore  License  README.md  pyproject.toml
numcore/: Library.py  __init__.py
