[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "numcore"
version = "0.1.9"
authors = [{ name = "ujwal mantri", email = "ujwalmantrifr@gmail.com" }]
description = "A comprehensive mathematics library... Growing daily with new functions"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = []